[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/Level1/DW_Platform_Green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boat(New).gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 6.5 )

[node name="Platform" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="CollisionDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
position = Vector2( 13.5, -14.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.044, 0.043 )
texture = ExtResource( 1 )

[node name="fromPos" type="Position2D" parent="."]

[node name="toPos" type="Position2D" parent="."]
position = Vector2( 750, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -311, -166 )
polygon = PoolVector2Array( 259, 159, 290, 158, 293, 134, 326, 158, 358, 159, 365, 176, 257, 176 )

[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
